Created outer container that should contain all other elements.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="dev/css/app.css">
   <title>Drum Machine</title>
 </head>
 <body>
